--- a/scss/pages/_authors.scss
+++ b/scss/pages/_authors.scss
@@ -1,5 +1,8 @@
 .author-container {
     padding: 48px 0;
+      @include responsive("md") {
+    padding: 0;
+    }
 }
 
 .author-item-cont{
@@ -7,16 +10,30 @@
     padding: 48px 5px;
     transition: 0.3s;
   overflow: hidden;
+    @include responsive("md") {
+     flex-direction: column;
+     align-items: center;
+     gap: 20px;
+    }
 }
 .author-item-cont:last-of-type{
     border-bottom:none ;
 }
 .author-info-cont{
     gap:48px;
+    @include responsive("lg") {
+      flex-direction: column;
+
+    }
+ 
 }
+
 .podcaast-meta-info{
     flex: 1;
+   
 }
+      
+
 
 
 .author-item-cont:hover .next-page {
@@ -33,4 +50,24 @@
 }
 .author-meta{
   gap:96px;
+  align-items: center;
+  justify-content: end;
+     @include responsive("md") {
+     gap: 40px;
+     justify-content: center;
+    }
+@include responsive("sm") {
+     
+     gap: 20px;
+    }
+}
+.meta-item-pod{
+    @include responsive("md") {
+     display: flex;
+     gap: 20px;
+    }
+  @include responsive("sm") {
+     
+     gap: 5px;
+    }
 }
