--- a/scss/pages/_detail.scss
+++ b/scss/pages/_detail.scss
@@ -63,6 +63,11 @@
         padding: 40px;
         margin-bottom: 100px;
     }
+     @include responsive("lg") {
+        padding-top:40px ;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 .author-info {
