--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -160,7 +160,7 @@ color: $primary-color-black;
   @include multilineElipsis(2);
    @include responsive("sm") {
         font-size: 22px;
-        
+          @include multilineElipsis(4);
     }
 }
 
@@ -285,7 +285,8 @@ font-size: 42px;
    @include multilineElipsis(3);
      @include responsive("sm") {
         font-size: 42px;
-        
+           @include multilineElipsis(5);
+
     }
 }
 
